<?xml version="1.0"?>
<package format="3">

  <name>Arm_urdf</name>
  <version>1.0.0</version>

  <description>
    URDF Description package for Arm_urdf
  </description>

  <maintainer email="your@email.com">your_name</maintainer>

  <license>BSD</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- Optional -->
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>